fixing spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -120,7 +120,7 @@ div.sidebyside {
 	text-align: left;
 	color: gray;
 	margin: 10px 10px 10px 300px;
-	width: 330px;
+	width: 315px;
 	border-top: 1px solid gray;
 	padding: 10px;
 }
